--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,7 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
-before_install:
-  - chomod +x gradlew
-
-script: "./gradlew clean build"
+script: "chmod +x ./gradlew clean build"
 
 #before_deploy:
 #  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
