--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ cache:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+before_install: "chmod +x gradlew"
+
 script: "chmod +x gradlew && ./gradlew clean build"
 
 #before_deploy:
