--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
 
 before_install: "chmod +x gradlew"
 
-script: "chmod +x gradlew && ./gradlew clean build"
+script: "./gradlew clean build"
 
 #before_deploy:
 #  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
