--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,8 @@ deploy:
     region: ap-northeast-2
     wait-until-deployed: true
 
-# CI 실행 완료시 메일로 알람
-notifications:
-  email:
-    recipients:
-      - wavekr@gmail.com
+## CI 실행 완료시 메일로 알람
+#notifications:
+#  email:
+#    recipients:
+#      - wavekr@gmail.com
